--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 grammers-client = "0.4.0"
+grammers-session = "0.4.0"
 serde_json = "1.0.92"
 serde = { version = "1.0.152", features = ["derive"] }
+tokio = "1.25.0"
