--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ grammers-session = "0.4.0"
 serde_json = "1.0.92"
 serde = { version = "1.0.152", features = ["derive"] }
 tokio = "1.25.0"
+mime = "0.3.16"
+md5 = "0.7.0"
