--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wallpaper_scrapper-rs"
-version = "0.1.0"
-edition = "2021"
+version = "1.0.0"
+edition = "2023"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,3 +13,4 @@ serde = { version = "1.0.152", features = ["derive"] }
 tokio = "1.25.0"
 mime = "0.3.16"
 md5 = "0.7.0"
+async-std = "1.12.0"
