--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 [dependencies]
 grammers-client = "0.4.0"
 grammers-session = "0.4.0"
+grammers-tl-types = "0.4.0"
 serde_json = "1.0.92"
 serde = { version = "1.0.152", features = ["derive"] }
-tokio = "1.25.0"
+tokio = { version = "1.25.0", features = ["full"] }
 mime = "0.3.16"
 md5 = "0.7.0"
 async-std = "1.12.0"
