--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ tokio = { version = "1.25.0", features = ["full"] }
 mime = "0.3.16"
 md5 = "0.7.0"
 async-std = "1.12.0"
+chrono = "0.4.23"
+rand = "0.8.5"
